# content-moderation-cultural-lens

./: .gitignore  README.md  experiment-01.sh  experiment-02.sh  pyproject.toml  requirements.txt  run.sh
experiment-01/: run-1.py  run-2.py  sample-v1.py  sample-v2.py  synthetic_ad_dataset.json  synthetic_ad_dataset_v1.json
experiment-02/: README.md  check-data.ipynb  models.py  notes.txt  output_schemas.py  prompts.py  run.ipynb  run.py  utils.py
experiment-02/research/: run-candle-mongo.ipynb  run-culture-bank.ipynb  run-massive.ipynb
