[tool.poetry]
name = "content-moderation-cultural-lens"
version = "0.1.0"
description = ""
authors = ["guntsv <guntsvzz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.6"
openai = "1.58.1"
python-dotenv = "1.0.0"
tqdm = "^4.67.1"
pydantic = "^2.10.6"
spacy = "^3.7.4"
smart-open = {version = "*", python = ">=3.9.6,<4.0"}
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"